fix(css): background get started section on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -969,7 +969,7 @@ input.error {
 
 .get-started-container {
   background: var(--dark-violet) url(../../images/bg-boost-mobile.svg) 0 0 no-repeat;
-  background-size: contain;
+  background-size: cover;
   text-align: center;
   padding: 5.5rem 0 5rem;
 }
