--- a/css/mainDist.css
+++ b/css/mainDist.css
@@ -984,7 +984,7 @@ input.error {
 
 .get-started-container {
   background: var(--dark-violet) url(../../images/bg-boost-mobile.svg) 0 0 no-repeat;
-  background-size: contain;
+  background-size: cover;
   text-align: center;
   padding: 5.5rem 0 5rem;
 }
